# HexHavoc

./: README.md  start.sh
client/: README.md  bun.lockb  game.html  global.css  index.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/public/: index.html
client/public/game/: index.html
client/src/: Color.ts  SkinSelector.ts  Vec2.ts  example.ts  fonts.ts  game.ts  index.ts  server.ts
client/src/core/: Color.ts  Entity.ts  Geometry.ts  GeometryFactory.ts  Mat3.ts  Material.ts  ShaderProgramFactory.ts  Sprite.ts  Texture.ts  Transform.ts  Vec2.ts  Vec4.ts  index.ts  utils.ts
client/src/math/: index.ts
client/src/render/: Renderer.ts  Shader.ts  ShaderManager.ts  ShaderModule.ts  index.ts
client/src/render/hitbox/: main.frag  main.vert
client/src/render/shaders/entity/: EntityShader.ts  main.frag  main.vert
client/src/render/shaders/healthbar/: HealthBarShader.ts  main.frag  main.vert
client/src/render/shaders/hitbox/: HitboxShader.ts  main.frag  main.vert
client/src/render/shaders/player/: PlayerShader.ts
client/src/render/shaders/sprite/: SpriteShader.ts  main.frag  main.vert
client/src/render/shaders/terrain/: TerrainShader.ts  main.frag  main.vert
client/src/render/shaders/text/: TextShader.ts  main.frag  main.vert
client/src/shaders/: base2D.frag  base2D.vert  simple.vert
client/src/types/: game.ts  index.ts  packets.ts
docs/: packets.md
server/: Cargo.toml
server/src/: config.rs  main.rs  model.rs  packet.rs  terrain.rs
server/src/endpoints/: game.rs  new_game.rs  ws.rs
